2016-02-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Change the default value of pdfdecimaldigits from 2
	to 3, to be consistent with pdfTeX.

2016-02-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c, pdfencrypt.c, pdffont.c, pdfobj.h, xbb.c: Support to output
	a unique pdf file from a unique xdv/dvi file. If an environment
	variable SOURCE_DATE_EPOCH is defined correctly like
	SOURCE_DATE_EPOCH=1456304783, the value is used as the current time,
	and if the name of the output pdf file is the same, its content is
	exactly unique.

2016-02-23  Masamichi HOSODA  <trueroad@trueroad.jp>

	* pdfdoc.c: Support UTF-16 with null bytes as labels.

2016-02-23  Jonathan Kew  <jfkthame@gmail.com>

	* dvicodes.h, dvi.c, pdfdev.[ch]: Support xetex 0.99995 output
	(dvi format 7) that includes ActualText content.

2016-02-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_pdfm.c: Remaining fix for that on 2016-02-13.

2016-02-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* spc_pdfm.c: Remove maybe-redundant code to obtain consistency
	between dvi (dvipdfmx) and xdv (xdvipdfmx) with respect to
	\special{pdf:dest...}.

2016-02-09  Jiang Jiang  <gzjjgod@gmail.com>

	* dvi.c: Tweak skip_native_font_def() to make it handle more
	flags.
	* dpxutil.c: Remove a redundant check found by -Wall.

2016-02-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvi.c: disable check_postamble() introduced by Peter, because
	features embolden != 0, slant != 0, and extend != 1 do not work.

2016-01-30  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tt_post.c: Check post->glyphNamePtr[gid] before an access
	in tt_get_glyphname(). Reported by Werner LEMBERG:
	http://tug.org/pipermail/tex-live/2016-January/037696.html.

2016-01-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: Remove trailing directory separators if any in
	dpx_get_tmpdir().

2016-01-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c, mfileio.[ch]: Modification on handling of xref table.