@@ -64,6 +64,7 @@
 #include "error.h"
 
 int is_xdv = 0;
+int not_translate_origin = 0;
 
 const char *my_name;
 
@@ -178,6 +179,7 @@ show_usage (void)
   printf ("  --dvipdfm\tEnable DVIPDFM emulation mode\n");
   printf ("  -d number\tSet PDF decimal digits (0-5) [3]\n");
   printf ("  -f filename\tSet font map file name [pdftex.map]\n");
+  printf ("  --fixorigin\tDo not translate the origin for MP inclusion\n");
   printf ("  -g dimension\tAnnotation \"grow\" amount [0.0in]\n");
   printf ("  -h | --help \tShow this help message and exit\n");
   printf ("  -l \t\tLandscape mode\n");
@@ -393,6 +395,7 @@ static struct option long_options[] = {
   {"version", 0, 0, 130},
   {"showpaper", 0, 0, 131},
   {"dvipdfm", 0, 0, 132},
+  {"fixorigin", 0, 0, 1000},
   {"kpathsea-debug", 1, 0, 133},
   {0, 0, 0, 0}
 };
@@ -417,6 +420,10 @@ do_early_args (int argc, char *argv[])
     case 131: /* --showpaper */
       dumppaperinfo();
       exit(0);
+      break;
+
+    case 1000: /* --fixorigin */
+      not_translate_origin = 1;
       break;
 
     case 'q':
@@ -460,7 +467,7 @@ do_args (int argc, char *argv[], const char *source)
 
   while ((c = getopt_long(argc, argv, optstrig, long_options, NULL)) != -1) {
     switch(c) {
-    case 'h': case 130: case 131: case 'q': case 'v': /* already done */
+    case 'h': case 130: case 131: case 1000: case 'q': case 'v': /* already done */
       break;
 
     case 132: /* --dvipdfm */
@@ -935,8 +942,8 @@ main (int argc, char *argv[])
   
   opterr = 0;
 
-  /* Special-case single option --help, --showpaper, or --version, to avoid
-     possible diagnostics about config files, etc.
+  /* Special-case single option --fixorigin, --help, --showpaper, or --version,
+     to avoid possible diagnostics about config files, etc.
      Also handle -q and -v that cannot be set in config file. */
   do_early_args(argc, argv);
 
